# LearnOpenGL

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp
src/shaders/: shader.frag
